crates/cribo/tests/snapshots/execution_results@module_alias_namespace_escape.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/module_alias_namespace_escape/main.py
---
ExecutionResults {
    status: Success,
    stdout: "module namespace preserved",
    stderr: "",
}
