crates/cribo/tests/snapshots/execution_results@module_attribute_fstring.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/module_attribute_fstring/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Version: 1.0.0",
    stderr: "",
}
