crates/cribo/tests/snapshots/execution_results@module_side_effects_circular_order.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/module_side_effects_circular_order/main.py
---
ExecutionResults {
    status: Success,
    stdout: "A -> 42\nResult: A -> 42",
    stderr: "",
}
