crates/cribo/tests/snapshots/execution_results@multiline_strings_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/multiline_strings_test/main.py
---
ExecutionResults {
    status: Success,
    stdout: "simple_multiline: 'This is a\\nmultiline string\\nwith actual newlines'\nmodule_with_doc: '\\nModule with multiline docstring.\\n\\nThis docstring has:\\n- Multiple lines\\n- Blank lines\\n- Special characters: \\t tab\\n'\ngreeting: 'Hello World!\\nWelcome to\\nmultiline f-strings'\nraw_multiline: 'Raw string\\nwith \\\\n escape sequences\\nthat should be preserved'",
    stderr: "",
}
