crates/cribo/tests/snapshots/execution_results@namespace_attribute_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/namespace_attribute_reference/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Caught error: Test error\nSUCCESS",
    stderr: "",
}
