crates/cribo/tests/snapshots/execution_results@namespace_pkg_no_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/namespace_pkg_no_init/main.py
---
ExecutionResults {
    status: Success,
    stdout: "VALUE: 1337",
    stderr: "",
}
