crates/cribo/tests/snapshots/execution_results@namespace_simple_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/namespace_simple_test/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello, World!\nConstant: 42",
    stderr: "",
}
