crates/cribo/tests/snapshots/execution_results@no_ops_multimodule_mixed.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/no_ops_multimodule_mixed/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Server started on localhost:8080\nSuccess",
    stderr: "",
}
